@@ -26,6 +26,7 @@ Version 1.3.beta2 (2011-??-??)
 - Fixed quotes in "remove from cart" title (Ticket #478)
 - Fixed request token issues in Isotope javascript class
 - Fixed template search in theme folders (Ticket #467)
+- Fixed "redirect to first product" not working (Ticket #481)
 - Started using static functions if they don't need the class (see IsotopeFrontend)
 
 Version 1.3.beta1 (2011-07-18)
